# oci-devday-2025

./: .env.example  .gitignore  README.md  pyproject.toml
app/: Dockerfile  agent.py  main.py  requirements.txt
kubernetes/: deployment.yaml  ingress.yaml  service.yaml
setup/: 01_setup_sample_data.py  02_setup_vector_store.py
setup/data/: sessions.csv
